templates/datarobot-securitygroup.template.yaml
###########################################################################
#  Copyright 2020 DataRobot Inc. All Rights Reserved.                     #
#                                                                         #
#  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
#  OR CONDITIONS OF ANY KIND, express or implied.                         #
###########################################################################
​
AWSTemplateFormatVersion: 2010-09-09
Description: AWS CloudFormation Template with Security Group related reusable resources.
Parameters:
  MainStack:
    Type: String
  VpcId:
    Type: 'AWS::EC2::VPC::Id'
    Description: Id of your existing Virtual Private Cloud (VPC)
    ConstraintDescription: must be the VPC Id of an existing Virtual Private Cloud.
  CidrBlock:
    Description: The IP address range that can communicate with these EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x
  ExternalIPAddress:
    Description: The external IP address that can communicate with these EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP address cidr block
​
Resources:
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${AWS::StackName}-SecurityGroup
      GroupDescription: !Sub ${AWS::StackName}-SecurityGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:
​
### Debug settings, comment out or remove as required.
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0          
​
### Allow for access from "your IP"
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref ExternalIPAddress
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref ExternalIPAddress
        - IpProtocol: tcp 
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref ExternalIPAddress
        
### Required DataRobot ports
        - Description: Application Web
          IpProtocol: udp
          FromPort: '1514'
          ToPort: '1514'
          CidrIp: !Ref CidrBlock
​
        - Description: Model Management
          IpProtocol: tcp
          FromPort: '1514'
          ToPort: '1514'
          CidrIp: !Ref CidrBlock
​
        - Description: Prediction Optimization User Interface
          IpProtocol: tcp
          FromPort: '3000'
          ToPort: '3000'
          CidrIp: !Ref CidrBlock
​
        - Description: Tableau Extensions Service
          IpProtocol: tcp
          FromPort: '3003'
          ToPort: '3003'
          CidrIp: !Ref CidrBlock
​
        - Description: Docker Registry
          IpProtocol: tcp
          FromPort: '5000'
          ToPort: '5000'
          CidrIp: !Ref CidrBlock
          
        - Description: ELK Stack access
          IpProtocol: udp
          FromPort: '5000'
          ToPort: '5000'
          CidrIp: !Ref CidrBlock
​
        - Description: NGINX (Internal)
          IpProtocol: tcp
          FromPort: '5202'
          ToPort: '5203'
          CidrIp: !Ref CidrBlock
​
        - Description: ModMan
          IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          CidrIp: !Ref CidrBlock
​
        - Description: IDE Client Broker and Worker
          IpProtocol: tcp
          FromPort: '5445'
          ToPort: '5446'
          CidrIp: !Ref CidrBlock
​
        - Description: Secure Worker Broker Client and Worker
          IpProtocol: tcp
          FromPort: '5555'
          ToPort: '5556'
          CidrIp: !Ref CidrBlock
​
        - Description: RabbitMQ TLS
          IpProtocol: tcp
          FromPort: '5671'
          ToPort: '5671'
          CidrIp: !Ref CidrBlock
​
        - Description: RabbitMQ
          IpProtocol: tcp
          FromPort: '5672'
          ToPort: '5672'
          CidrIp: !Ref CidrBlock
​
        - Description: Redis
          IpProtocol: tcp
          FromPort: '6379'
          ToPort: '6379'
          CidrIp: !Ref CidrBlock
​
        - Description: Resource Monitor
          IpProtocol: tcp
          FromPort: '7558'
          ToPort: '7558'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot Flask Application
          IpProtocol: tcp 
          FromPort: '8000' 
          ToPort: '8000'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot v0 and v1 API routes
          IpProtocol: tcp
          FromPort: '8001'
          ToPort: '8002'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot v2 API
          IpProtocol: tcp 
          FromPort: '8004'
          ToPort: '8004'
​
        - Description: DataRobot OAuth2 API
          IpProtocol: tcp 
          FromPort: '8008'
          ToPort: '8008'          
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot Socket.IO Server
          IpProtocol: tcp
          FromPort: '8011'
          ToPort: '8011'
          CidrIp: !Ref CidrBlock
​
        - Description: Analytics Broker
          IpProtocol: udp 
          FromPort: '8018' 
          ToPort: '8018'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot Upload Server
          IpProtocol: tcp
          FromPort: '8023'
          ToPort: '8023'
          CidrIp: !Ref CidrBlock
​
        - Description: Tile Server GL and Proxy
          IpProtocol: tcp
          FromPort: '8051'
          ToPort: '8052'
          CidrIp: !Ref CidrBlock
​
        - Description: App Builder API and Internal API
          IpProtocol: tcp
          FromPort: '8083'
          ToPort: '8084'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot Prediction Optimization Application
          IpProtocol: tcp
          FromPort: '8097'
          ToPort: '8097'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot Datasets Service API
          IpProtocol: tcp
          FromPort: '8100'
          ToPort: '8100'
          CidrIp: !Ref CidrBlock
​
        - Description: Chart Export Service
          IpProtocol: tcp
          FromPort: '9001'
          ToPort: '9001'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot Availability Monitor
          IpProtocol: tcp
          FromPort: '9090'
          ToPort: '9090'
          CidrIp: !Ref CidrBlock
​
        - Description: Elasticsearch for AI Catalog
          IpProtocol: tcp
          FromPort: '9200'
          ToPort: '9200'
          CidrIp: !Ref CidrBlock
​
        - Description: Elasticsearch Internode Communication
          IpProtocol: tcp
          FromPort: '9300'
          ToPort: '9300'
          CidrIp: !Ref CidrBlock
​
        - Description: DataRobot PNGExport Service
          IpProtocol: tcp
          FromPort: '9494'
          ToPort: '9494'
          CidrIp: !Ref CidrBlock
​
        - Description: RabbitMQ Management HTTPS and HTTP Interface
          IpProtocol: tcp
          FromPort: '15671'
          ToPort: '15672'
          CidrIp: !Ref CidrBlock
​
        - Description: Redis Sentinel
          IpProtocol: tcp
          FromPort: '26379'
          ToPort: '26379'
          CidrIp: !Ref CidrBlock
​
        - Description: MongoDB
          IpProtocol: tcp
          FromPort: '27017'
          ToPort: '27017'
          CidrIp: !Ref CidrBlock
​
        - Description: Redis Proxy Server
          IpProtocol: tcp
          FromPort: '46379'
          ToPort: '46379'
          CidrIp: !Ref CidrBlock
​
### Kubernetes ports
​
        - Description: Calico Networking (BGP)
          IpProtocol: tcp
          FromPort: '179'
          ToPort: '179'
          CidrIp: !Ref CidrBlock
​
        - Description: kubernetes etcd
          IpProtocol: tcp
          FromPort: '2379'
          ToPort: '2380'
          CidrIp: !Ref CidrBlock
​
        - Description: Calico Networking with VXLAN enabled
          IpProtocol: udp
          FromPort: '4789'
          ToPort: '4789'
          CidrIp: !Ref CidrBlock
​
        - Description: Kubernetes API HTTPS endpoint
          IpProtocol: tcp
          FromPort: '6443'
          ToPort: '6443'
          CidrIp: !Ref CidrBlock
​
        - Description: Kubernetes (Internal communication)
          IpProtocol: tcp
          FromPort: '10250'
          ToPort: '10252'
          CidrIp: !Ref CidrBlock
​
        - Description: Kubernetes NodePort services
          IpProtocol: tcp
          FromPort: '30000'
          ToPort: '32767'
          CidrIp: !Ref CidrBlock

  InstanceSecurityGroupHA:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${AWS::StackName}-SecurityGroup
      GroupDescription: !Sub ${AWS::StackName}-SecurityGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:

      ### Required Ports for HA Mode
        - Description: ModMan - Zookeeper
          IpProtocol: tcp
          FromPort: 2888
          ToPort: 2888
          CidrIp: !Ref CidrBlock
​
        - Description: ModMan - Zookeeper
          IpProtocol: tcp
          FromPort: 3181
          ToPort: 3181
          CidrIp: !Ref CidrBlock
​
        - Description: ModMan - Zookeeper
          IpProtocol: tcp
          FromPort: 3888
          ToPort: 3888
          CidrIp: !Ref CidrBlock
​
        - Description: ModMan - HA Postgres
          IpProtocol: tcp
          FromPort: 4000
          ToPort: 4000
          CidrIp: !Ref CidrBlock
​
        - Description: HAProxy HA RabbitMQ
          IpProtocol: tcp
          FromPort: 4369
          ToPort: 4369
          CidrIp: !Ref CidrBlock
​
        - Description: ModMan - HA Postgres
          IpProtocol: tcp
          FromPort: 5433
          ToPort: 5433
          CidrIp: !Ref CidrBlock
​
        - Description: ModMan - HAProxy HA Postgres
          IpProtocol: tcp
          FromPort: 5434
          ToPort: 5434
          CidrIp: !Ref CidrBlock
​
        - Description: HAProxy HA RabbitMQ TLS
          IpProtocol: tcp
          FromPort: 5671
          ToPort: 5671
          CidrIp: !Ref CidrBlock
​
        - Description: HAProxy HA RabbitMQ
          IpProtocol: tcp
          FromPort: 5672
          ToPort: 5672
          CidrIp: !Ref CidrBlock
​
        - Description: HA RabbitMQ
          IpProtocol: tcp
          FromPort: 5673
          ToPort: 5673
          CidrIp: !Ref CidrBlock
​
        - Description: HA Proxy Instance
          IpProtocol: tcp
          FromPort: 7001
          ToPort: 7001
          CidrIp: !Ref CidrBlock
​
        - Description: TileServer GL Load Balancer
          IpProtocol: tcp
          FromPort: 8052
          ToPort: 8052
          CidrIp: !Ref CidrBlock  
​
        - Description: HAProxy HA RabbitMQ Management HTTP(S) Interface
          IpProtocol: tcp
          FromPort: 15671
          ToPort: 15671
          CidrIp: !Ref CidrBlock
​
        - Description: HAProxy HA RabbitMQ Management HTTP Interface
          IpProtocol: tcp
          FromPort: 15672
          ToPort: 15672
          CidrIp: !Ref CidrBlock
​
        - Description: HA RabbitMQ Management HTTP(S) Interface
          IpProtocol: tcp
          FromPort: 15673
          ToPort: 15673
          CidrIp: !Ref CidrBlock
​
        - Description: HA RabbitMQ inter-node communication*
          IpProtocol: tcp
          FromPort: 25672
          ToPort: 25672
          CidrIp: !Ref CidrBlock
​
​
Outputs:
  InstanceSecurityGroup:
    Description: SecurityGroup settings when using an S3 Bucket
    Value: 
      Ref: InstanceSecurityGroup
  SecurityGroupId:
    Description: "PrivateIP IP address of the newly created EC2 instance"
    Value: !GetAtt InstanceSecurityGroup.GroupId
